[package]
name = "portail"
version = "0.1.0"
edition = "2024"

[lints.clippy]
enum_variant_names = "allow"

[dependencies]
annotate-snippets = "0.12.11"
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.57", features = ["derive", "string"] }
fast-socks5 = "1.0.0"
http = "1.4.0"
http-body-util = "0.1.3"
# Remove once https://github.com/z-galaxy/zlink/issues/230 makes it into a release.
futures-util = "0.3.32"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "http1"] }
nix = { version = "0.31.1", features = ["socket", "uio", "net"] }
peekable = { version = "0.4.1", features = ["tokio"] }
regex = "1.12.2"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
winnow = "0.7.14"
zlink = { git = "https://github.com/RaitoBezarius/zlink", branch = "suppgps-fix" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = "1.46.3"
rand = "0.10.0"

[[bench]]
name = "acl"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
