[package]
name = "portail"
version = "0.1.0"
edition = "2024"

[lints.clippy]
enum_variant_names = "allow"

[dependencies]
annotate-snippets = "^0.12"
anyhow = "^1"
bytes = "^1"
clap = { version = "^4", features = ["derive", "string"] }
fast-socks5 = "^1"
http = "^1"
http-body-util = "0.1.3"
hyper = { version = "^1", features = ["full"] }
hyper-util = { version = "^0.1", features = ["tokio", "server", "http1"] }
nix = { version = "^0.31", features = ["socket", "uio", "net"] }
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "^3"
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
tokio-rustls = "^0.26"
toml = "^1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
winnow = "^1"
zlink = "^0.5"
rustls-pki-types = "^1"
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = "1.47.2"
rand = "0.10.1"

[[bench]]
name = "acl"
harness = false

[profile.dev.package]
insta.opt-level = 3
